--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,19 +7,17 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib", "rlib"]
 [dependencies]
+cfg-if = "1"
 winit = "0.28"
 env_logger = "0.10"
 log = "0.4"
 wgpu = "0.16"
-cfg-if = "1.0.0"
+pollster = "0.3"
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
 console_log = "1.0"
-wgpu = { version = "0.16", features = ["webgl"]}
+wgpu = { version = "0.16", features = ["webgl"] }
 wasm-bindgen = "0.2"
-wasm-bindgen-futures = "0.4.30"
-web-sys = { version = "0.3", features = [
-    "Document",
-    "Window",
-    "Element",
-]}
+wasm-bindgen-futures = "0.4"
+web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
