--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -3,12 +3,12 @@ name: Continuous integration
 on: [push, pull_request]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  #test:
+    #runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - run: cargo test --all
+    #steps:
+    #- uses: actions/checkout@v2
+    #- run: cargo test --all
 
   format:
     runs-on: ubuntu-latest
